--- a/shop.html
+++ b/shop.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="shop.css"\>
-    <head>
-        <title>Daily Deal</title>
-    </head>
-    <body>
-        <div class="logo">
-            <a class="dailydeal" href="#logo"><h2>Daily Deal</h2><p>your best shopping centre</p></a>
+<link rel="stylesheet" href="shop.css" \>
 
-        </div>
-        <div class="search">
-            <input type="search" placeholder="What you want to get?">
-            
-        </div>
-        <div class="option">
-        <select name="category" id="category">
-            <option value="option">choice</option>
-            <optgroup label="Clothes">
-              <option value="Men">Men</option>
-              <option value="Women">Women</option>
-            </optgroup>
-            <optgroup label="Food">
-              <option value="dessert">Dessert</option>
-              <option value="savory">Savory</option>
-            </optgroup>
-          </select>
-          </div>
-          
-    </body>
+<head>
+  <title>Daily Deal</title>
+</head>
+
+<body>
+  <div class="logo">
+    <a class="dailydeal" href="#logo">
+      <h2>Daily Deal</h2>
+      <p>your best shopping centre</p>
+    </a>
+
+  </div>
+  <div class="search">
+    <input type="search" placeholder="What you want to get?">
+
+  </div>
+  <div class="option">
+    <select name="category" id="category">
+      <option value="option">choice</option>
+      <optgroup label="Clothes">
+        <option value="Men">Men</option>
+        <option value="Women">Women</option>
+      </optgroup>
+      <optgroup label="Food">
+        <option value="dessert">Dessert</option>
+        <option value="savory">Savory</option>
+      </optgroup>
+    </select>
+  </div>
+  <div class="ads">
+
+  </div>
+  <div class="news"></div>
+
+    <a href=".html"><img src="shop cart.png" alt="Shop Cart" name="cart"></a>
+    <a href=".html"><img src="bell.png" alt="Notifications" name="bell"></a>
+    <a href=".html"><img src="setting.png" alt="Setting" name="setting"></a>
+    <a href=".html"><img src="user.png" alt="User" name="user"></a>
+ 
+</body>
+
 </html>
